worked showing the board and logic to play game

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <div id="container">
-        <div id="topleft"></div>
-        <div id="topmid"></div>
-        <div id="topright"></div>
-        <div id="midleft"></div>
-        <div id="midmid"></div>
-        <div id="midright"></div>
-        <div id="botleft"></div>
-        <div id="botmid"></div>
-        <div id="botright"></div>
+        <div id="topleft" class="brdspc"></div>
+        <div id="topmid" class="brdspc"></div>
+        <div id="topright" class="brdspc"></div>
+        <div id="midleft" class="brdspc"></div>
+        <div id="midmid" class="brdspc"></div>
+        <div id="midright" class="brdspc"></div>
+        <div id="botleft" class="brdspc"></div>
+        <div id="botmid" class="brdspc"></div>
+        <div id="botright" class="brdspc"></div>
     </div>
     <script src="tic.js"></script> 
 </body>
