logic for stop click after win complete, start w display

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="botmid" class="brdspc"></div>
         <div id="botright" class="brdspc"></div>
     </div>
+    <div id="gamedisplay"></div>
     <script src="tic.js"></script> 
 </body>
 </html> 
