worked on UI, inputting names etc

--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
         <div id="botmid" class="brdspc"></div>
         <div id="botright" class="brdspc"></div>
     </div>
-    <div id="gamedisplay"></div>
+    <div id="gamedisplay">
+        <div id="playerinput">
+            <label for="pl1">Player1 name:</label><br>
+            <input type="text" id="pl1" name="pl1" placeholder="Player1"><br>
+            <label for="pl2">Player2 name:</label><br>
+            <input type="text" id="pl2" name="pl2" placeholder="Player2"><br><br>
+            <button id="start">Start</button>
+        </div> 
+        
+        <div id="display">
+            <div id="displaytxt">it's player1s turn</div>
+            <button>restart</button>
+            <button>restart and change names</button>
+        </div>
+    </div>
     <script src="tic.js"></script> 
 </body>
 </html> 
