worked on styling

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <div id="botmid" class="brdspc"></div>
         <div id="botright" class="brdspc"></div>
     </div>
+
+    <h1>TIC-TAC-TOE</h1>
           
         
     <div id="gamedisplay">
         <div id="displaytxt">it's player1s turn</div>
         <button id="restart">restart</button>
-        <button id="namechange">restart and change names</button>
+        <button id="namechange">restart + change names</button>
     </div>
    
 
