working on responsive + small fix in js

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <label for="pl1">Player1 name (X):</label><br>
         <input type="text" id="pl1" name="pl1" placeholder="Player1"><br>
         <label for="pl2">Player2 name (O):</label><br>
-        <input type="text" id="pl2" name="pl2" placeholder="Player2"><br><br>
+        <input type="text" id="pl2" name="pl2" placeholder="Player2"><br>
         <button id="start">Start</button>
     </div>
     
